Fixed scrollbar issues

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,7 @@ code {
 body::-webkit-scrollbar {
     display: none;
 }
+
+body *::-webkit-scrollbar {
+    display: none;
+}
